Added fourth example

--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,13 @@
-# Prerequisites
-*.d
-
-# Object files
 *.o
-*.ko
-*.obj
-*.elf
+*.exe
+*.out
 
 /gtk1/gtk1
 /gtk2/gtk2
 /gtk3/gtk3
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+/gtk4/gtk4
+/gtk5/gtk5
+/gtk6/gtk6
+/gtk7/gtk7
+/gtk8/gtk8
+/gtk9/gtk9
